remove align and justify to fix Cat 3 text

--- a/styles.css
+++ b/styles.css
@@ -56,8 +56,6 @@ li {
   border: 2px solid #ccc;
   padding: 10px;
   flex: 1;
-  justify-content: center;
-  align-items: center;
   margin-top: 60px;
   margin-bottom: 20px;
   margin-right: 10px;
